[package]
name = "raftfwk"
version = "0.1.0"
authors = ["blackredscarf <blackredscarf@gmail.com>"]
edition = "2018"


[lib]
name = "raftfwk"
path = "src/lib.rs"

[dependencies]
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.5.0"

bincode = "1.2.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

futures-01 = { package = "futures", version = "^0.1.15" }
grpcio = { version="0.5.3", features = [ "secure" ] }
protobuf = "2.14"

raft = { git = "https://github.com/tikv/raft-rs.git", branch = "0.6.x" }

rusty-leveldb = "0.3.5"