[package]
name = "kv"
version = "0.1.0"
authors = ["blackredscarf <blackredscarf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raftfwk = { path = "../..", version = "0.1.0" }

slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.5.0"
structopt = { version = "0.3", default-features = false }

bincode = "1.2.1"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }

rusty-leveldb = "0.3.5"
